--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Homepage</title>
 </head>
 <body>
-   <h1>Welcome</h1>
+   <h1>Croissant</h1>
+   <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Provident incidunt atque aspernatur dolorum maiores 
+    necessitatibus fugit sequi, at facere id accusantium dolor
+     adipisci 
+    minima alias nostrum fugiat libero. Aliquam, facilis.
+   </p>
+   <div class="container">
+   <a href="/">Homepage</a>
+   <a href="/about.html"></a>
    <a href="/about.html">About me</a>
+</div>
 </body>
 </html>
