--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
      adipisci 
     minima alias nostrum fugiat libero. Aliquam, facilis.
    </p>
-   <div class="container">
+   <div class="container text-center">
+    <div class="raw">
+        <div class="col">
    <a href="/">Homepage</a>
-   <a href="/about.html"></a>
-   <a href="/about.html">About me</a>
+</div>
+<div class="col">
+   <a href="/photo.html">Photo</a>
+   </div>
+<div class="col">
+   <a href="/contact.html">Contact</a>
+</div>
+</div>
 </div>
 </body>
 </html>
