--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     minima alias nostrum fugiat libero. Aliquam, facilis.
    </p>
    <div class="container text-center">
-    <div class="raw">
+    <div class="row">
         <div class="col">
    <a href="/">Homepage</a>
 </div>
