--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,25 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Contact us</h1>  
+    <p>
+        To contact us, please email as at <a href="mailto:hello@croissant.com">
+            hello@croissant.com
+        </a>
+        for more info
+    </p>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+       <a href="/">Homepage</a>
+    </div>
+    <div class="col">
+       <a href="/photo.html">Photo</a>
+       </div>
+    <div class="col">
+       <a href="/contact.html">Contact</a>
+    </div>
+    </div>
+    </div>
 </body>
 </html>
