--- a/index.html
+++ b/index.html
@@ -16,18 +16,10 @@
      adipisci 
     minima alias nostrum fugiat libero. Aliquam, facilis.
    </p>
-   <div class="container text-center">
-    <div class="row">
-        <div class="col">
+   <div class="navigation-links">    
    <a href="/">Homepage</a>
-</div>
-<div class="col">
-   <a href="/photo.html">Photo</a>
-   </div>
-<div class="col">
+<a href="/photo.html">Photo</a>
    <a href="/contact.html">Contact</a>
-</div>
-</div>
-</div>
+   </div>
 </body>
 </html>
