--- a/contact.html
+++ b/contact.html
@@ -15,18 +15,11 @@
         </a>
         for more info
     </p>
-    <div class="container text-center">
-        <div class="row">
-            <div class="col">
-       <a href="/">Homepage</a>
-    </div>
-    <div class="col">
-       <a href="/photo.html">Photo</a>
-       </div>
-    <div class="col">
-       <a href="/contact.html">Contact</a>
-    </div>
-    </div>
-    </div>
+ 
+    <div class="navigation-links">    
+        <a href="/">Homepage</a>
+        <a href="/photo.html">Photo</a>
+        <a href="/contact.html">Contact</a>
+     </div>
 </body>
 </html>
