--- a/photo.html
+++ b/photo.html
@@ -11,7 +11,8 @@
 <body>
       <h1>A picture of Croissant</h1>
       <div>
-        <img src="" alt="...">
+        <img src="img/French-Croissants-SM-2363-500x500.jpg" 
+        alt="...">
       </div>
   
       <div class="navigation-links">    
