--- a/photo.html
+++ b/photo.html
@@ -16,9 +16,9 @@
       </div>
   
       <div class="navigation-links">    
-         <a href="/">Homepage</a>
-         <a href="/photo.html">Photo</a>
-         <a href="/contact.html">Contact</a>
+         <a href="#">Homepage</a>
+         <a href="photo.html">Photo</a>
+         <a href="contact.html">Contact</a>
       </div>
 </body>
 </html>
