--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     </p>
  
     <div class="navigation-links">    
-        <a href="#">Homepage</a>
+        <a href="index.html">Homepage</a>
         <a href="photo.html">Photo</a>
         <a href="contact.html">Contact</a>
      </div>
