--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     minima alias nostrum fugiat libero. Aliquam, facilis.
    </p>
    <div class="navigation-links">    
-      <a href="#">Homepage</a>
+      <a href="index.html">Homepage</a>
       <a href="photo.html">Photo</a>
       <a href="contact.html">Contact</a>
    </div>
