--- a/photo.html
+++ b/photo.html
@@ -16,7 +16,7 @@
       </div>
   
       <div class="navigation-links">    
-         <a href="#">Homepage</a>
+         <a href="index.html">Homepage</a>
          <a href="photo.html">Photo</a>
          <a href="contact.html">Contact</a>
       </div>
