--- a/photo.html
+++ b/photo.html
@@ -12,7 +12,7 @@
       <h1>A picture of Croissant</h1>
       <div>
         <img src="img/French-Croissants-SM-2363-500x500.jpg" 
-        alt="...">
+        alt="..."/>
       </div>
   
       <div class="navigation-links">    
