--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     minima alias nostrum fugiat libero. Aliquam, facilis.
    </p>
    <div class="navigation-links">    
-      <a href="index.html" class="link">Homepage</a>
-      <a href="photo.html" class="link">Photo</a>
-      <a href="contact.html" class="link">Contact</a>
+      <a href="index.html">Homepage</a>
+      <a href="photo.html">Photo</a>
+      <a href="contact.html">Contact</a>
    </div>
 </body>
 </html>
