--- a/photo.html
+++ b/photo.html
@@ -10,7 +10,7 @@
 </head>
 <body>
       <h1>A picture of Croissant</h1>
-      <div>
+      <div class="image">
         <img src="img/French-Croissants-SM-2363-500x500.jpg" 
         alt="..."/>
       </div>
