--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="croissant" content="Croissant description and main recipies">
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Homepage</title>
+    <title>Description of croissant</title>
 </head>
 <body>
    <h1>Croissant</h1>
@@ -17,9 +17,9 @@
     minima alias nostrum fugiat libero. Aliquam, facilis.
    </p>
    <div class="navigation-links">    
-      <a href="index.html">Homepage</a>
-      <a href="photo.html">Photo</a>
-      <a href="contact.html">Contact</a>
+      <a href="index.html" target="_blank">Homepage</a>
+      <a href="photo.html" target="_blank">Photo</a>
+      <a href="contact.html" target="_blank">Contact</a>
    </div>
 </body>
 </html>
