--- a/photo.html
+++ b/photo.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Photoof croissant" content="Croissant image">
     <link rel="stylesheet" href="css/styles.css">
   
-    <title>Document</title>
+    <title>Photo</title>
     
 </head>
 <body>
       <h1>A picture of Croissant</h1>
       <div class="image">
         <img src="img/French-Croissants-SM-2363-500x500.jpg" 
-        alt="..."/>
+        alt="croissant"/>
       </div>
   
       <div class="navigation-links">    
-         <a href="index.html">Homepage</a>
-         <a href="photo.html">Photo</a>
-         <a href="contact.html">Contact</a>
+         <a href="index.html" target="_blank">Homepage</a>
+         <a href="photo.html" target="_blank">Photo</a>
+         <a href="contact.html" target="_blank">Contact</a>
       </div>
 </body>
 </html>
